fixed error found

--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -43,7 +43,7 @@ Interarrival times in a \gls{pp} are iid exponentials with parameter $\lambda$
 Where \eqref{poiss_independence} is possible because $S_0$ and $S_1$ are disjoint and so the condition on $S_0$ is independent on the $S_1$ slot.
 In general,
 \begin{equation}
-	\prob[S_n > t | S_i = s_i, ~i=0,s,n-1] = e^{-\lambda t}
+	\prob[S_n > t | S_i = s_i, ~i=0,\dots,n-1] = e^{-\lambda t}
 \end{equation}
 \end{proof}
 
