--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -11,6 +11,7 @@
 \usepackage{graphics}
 \usepackage{wrapfig}
 \usepackage{changepage}
+\usepackage{shapepar} 
 
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
 
@@ -153,15 +154,19 @@
 
 \hspace{0.5cm}
 
-\emph{\Large{NETWORK MODELING}} \\
+\emph{\Huge{NETWORK MODELING}} \\
 \vspace{1cm}
-\includegraphics[width=9cm]{Zorzilla}\\
+\textit{-Follow the white rabbit-}\\
+\vspace{0.4cm}
+\includegraphics[width=4cm]{rabbit}\\
 \vspace{0.5cm}
-{written with love by\par}
-{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Federico Mason, Lorenza Prospero, Cristina Gava, Matteo Ciprian\par}
+\vfill
+{written with love by:\par}
+\vspace{0.8cm}
+%\large
+\heartpar{Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Federico Mason, Lorenza Prospero, Cristina Gava, Matteo Ciprian}
 \end{center}
 
-\vfill
 \begin{center}
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 \textsc{Academic Year 2016/2017}
