Ignored the "I don't know why, TODO"
Praetor non curat de minimis

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -1139,7 +1139,7 @@ We then found out that $A(s)=s$. We can then calculate:
 	1-s^i = \sum\limits_{j=0}^{+\infty} a_{j} \cdot (1-s^{i+j-1}) = 1-s^{i-1} \cdot A(s)
 \end{equation}
 
-but I don't know why. TODO!!
+%but I don't know why. TODO!!
 
 \begin{theorem}[4.2, KT p. 95 (sufficient condition for recurrence)]
 	An irreducible \gls{mc} is recurrent if:
