--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -715,6 +715,78 @@ The case where everyone departs, or where there are at least j Poisson events ca
 \end{equation}
 Which gives an almost lower triangular transition matrix.
 
+\subsection{Data protocols - Layer 2 and 4}
+\begin{figure}
+	\input{img/dataProto.tex}
+	\caption{A simple queueing protocol like the one explained in this section}
+	\label{fig:dataProto}
+\end{figure}
+Let's now suppose to have a system where every T seconds some amount of data $\xi_n$ is generated and let $a_k=\prob[\xi_n=k]$. Let's now assume that the data is generated as an i.i.d. process.  \Fig{fig:dataProto} can be useful.
+Suppose that the system schedule to send an amount of data at the beginning of each slot. Let's now analyze two protocols:
+\begin{enumerate}
+	\item all data is sent up to a max of M data unit
+	\item data is sent if there is at least m data unit \label{proto2}
+	\item same as 2) but send up to M data unit
+\end{enumerate}
+Let's now suppose that the data incoming in the during one slot is queued for the next transmission
+\subsubsection*{Proto 1}
+\begin{equation}
+	X_{n+1}=\begin{cases}
+			\xi_n & \text{if } X_n\le M\\ X_n-M+\xi_n & \text{if } X_n> M
+	\end{cases}
+\end{equation}
+\paragraph{Transition diagram and matrix}
+\begin{equation}
+	P=\begin{blockarray}{cccc}
+			\begin{block}{c(ccc)}
+				1 & a_0 & a_1 & \dots & \dots \\
+				\vdots & \vdots &\vdots &\dots \\
+				M & a_0 & a_1 & \dots & \dots \\
+				M+1 & 0 & a_0 & a_1 & \dots \\
+				\vdots & \vdots &\vdots &\dots \\
+		\end{block}
+	\end{blockarray}
+\end{equation}
+\begin{figure}
+	\input{img/diagProto1.tex}
+	\label{diag:proto1}
+\end{figure}
+
+\subsubsection*{Proto 2}
+\begin{equation}
+	X_{n+1}=\begin{cases}
+			\xi_n & \text{if } X_n\ge m\\ X_n+\xi_n & \text{if } X_n<m
+	\end{cases}
+\end{equation}
+\paragraph{Transition diagram and matrix}
+\begin{equation}
+	P=\begin{blockarray}{cccc}
+			\begin{block}{c(ccc)}
+				1 & a_0 & a_1 & \dots & \dots & \dots\\
+				2 & 0 & a_0 & \ddots & \dots & \dots\\
+				\vdots & \vdots &\vdots &\dots & \dots\\
+				m-1 & \dots & \dots & \dots & a_0 & \dots\\
+				m & a_0 & a_1 & a_2 &\dots & \dots\\
+				m+1 & a_0 & a_1 & a_2 &\dots & \dots\\
+				\vdots & \vdots &\vdots &\dots & \dots\\
+		\end{block}
+	\end{blockarray}
+\end{equation}
+\begin{figure}
+	\input{img/diagProto2.tex}
+	\label{diag:proto1}
+\end{figure}
+\subsubsection*{Proto 3}
+\begin{equation}
+	X_{n+1}=\begin{cases}
+			\xi_n & \text{if } m\le X_n\le M\\
+			 X_n+\xi_n & \text{if } X_n<m
+			 X_n-M+\xi_n & \text{if } X_n> M
+	\end{cases}
+\end{equation}
+\paragraph{Transition diagram}
+The transition diagram is the combination of the two previous protocols.
+
 	\subsection{G/M/1 queue limiting distribution}
 	We know that the limiting distribution is the solution of the following system of equations:
 	\begin{equation*}
